[project]
name = "sqlalchemy-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.6",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]

[tool.black]
line-length = 88
target-version = ["py312"]
indent = 4

[tool.ruff]
line-length = 88
select = ["C", "E", "F", "W"]
